{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 190,
  "lineage": "d93811d4-32fe-658c-4c97-373fc4a119c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bba7cae0c144f465",
            "associate_with_private_ip": "10.0.1.55",
            "association_id": "eipassoc-0d153b8f3df0fa619",
            "domain": "vpc",
            "id": "eipalloc-0bba7cae0c144f465",
            "instance": "i-0121ecbfd09e74c2d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00b47defe16dd43d9",
            "private_dns": "ip-10-0-6-178.ec2.internal",
            "private_ip": "10.0.6.178",
            "public_dns": "ec2-3-232-0-156.compute-1.amazonaws.com",
            "public_ip": "3.232.0.156",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.exch_gateway",
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "exch_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:internet-gateway/igw-07592f1e1fdf6239f",
            "id": "igw-07592f1e1fdf6239f",
            "owner_id": "671590219173",
            "tags": {
              "name": "Exchange_Gateway"
            },
            "tags_all": {
              "name": "Exchange_Gateway"
            },
            "vpc_id": "vpc-0801d1eafdc5f14b0"
          },
          "dependencies": [
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "exch_server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671590219173:loadbalancer/app/web-server-lb/872b83326c5e5b2d",
            "arn_suffix": "app/web-server-lb/872b83326c5e5b2d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-server-lb-2032223997.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:671590219173:loadbalancer/app/web-server-lb/872b83326c5e5b2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-server-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f97232f560dea08b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-026adcf18d37b0684"
              },
              {
                "subnet_id": "subnet-071e30616de7b7c32"
              }
            ],
            "subnets": [
              "subnet-026adcf18d37b0684",
              "subnet-071e30616de7b7c32"
            ],
            "vpc_id": "vpc-0801d1eafdc5f14b0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.exch_security",
            "aws_subnet.exch_subnet",
            "aws_subnet.exch_subnet2",
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_server_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671590219173:listener/app/web-server-lb/872b83326c5e5b2d/ab8892599f5aeec0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671590219173:targetgroup/web-server-target-group/71c997c214c1773b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671590219173:listener/app/web-server-lb/872b83326c5e5b2d/ab8892599f5aeec0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671590219173:loadbalancer/app/web-server-lb/872b83326c5e5b2d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.exch_server_lb",
            "aws_lb_target_group.web_server_target_group",
            "aws_security_group.exch_security",
            "aws_subnet.exch_subnet",
            "aws_subnet.exch_subnet2",
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_server_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671590219173:targetgroup/web-server-target-group/71c997c214c1773b",
            "arn_suffix": "targetgroup/web-server-target-group/71c997c214c1773b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671590219173:targetgroup/web-server-target-group/71c997c214c1773b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-server-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0801d1eafdc5f14b0"
          },
          "dependencies": [
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "exch_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:network-interface/eni-018d9164b38cae66f",
            "id": "eni-018d9164b38cae66f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:9a:7f:16:c9:49",
            "owner_id": "671590219173",
            "private_dns_name": "ip-10-0-1-55.ec2.internal",
            "private_ip": "10.0.1.55",
            "private_ip_list": [
              "10.0.1.55"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.55"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f97232f560dea08b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026adcf18d37b0684"
          },
          "dependencies": [
            "aws_security_group.exch_security",
            "aws_subnet.exch_subnet",
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "exch_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:route-table/rtb-07a3cb21f0b4e5c76",
            "id": "rtb-07a3cb21f0b4e5c76",
            "owner_id": "671590219173",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07592f1e1fdf6239f",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07592f1e1fdf6239f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0801d1eafdc5f14b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.exch_gateway",
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "exch_asociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6744ae8a4cc5cda",
            "route_table_id": "rtb-07a3cb21f0b4e5c76",
            "subnet_id": "subnet-026adcf18d37b0684"
          },
          "dependencies": [
            "aws_internet_gateway.exch_gateway",
            "aws_route_table.exch_route_table",
            "aws_subnet.exch_subnet",
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "exch_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:security-group/sg-0f97232f560dea08b",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f97232f560dea08b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "671590219173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0801d1eafdc5f14b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exch_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:subnet/subnet-026adcf18d37b0684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026adcf18d37b0684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671590219173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Exchange_Subnet"
            },
            "tags_all": {
              "name": "Exchange_Subnet"
            },
            "vpc_id": "vpc-0801d1eafdc5f14b0"
          },
          "dependencies": [
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exch_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:subnet/subnet-071e30616de7b7c32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071e30616de7b7c32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671590219173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Exchange_Subnet2"
            },
            "tags_all": {
              "name": "Exchange_Subnet2"
            },
            "vpc_id": "vpc-0801d1eafdc5f14b0"
          },
          "dependencies": [
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exch_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:subnet/subnet-0e4d4e6d9ea633c91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4d4e6d9ea633c91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671590219173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Exchange_Subnet3"
            },
            "tags_all": {
              "name": "Exchange_Subnet3"
            },
            "vpc_id": "vpc-0801d1eafdc5f14b0"
          },
          "dependencies": [
            "aws_vpc.exch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exch_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671590219173:vpc/vpc-0801d1eafdc5f14b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0572e55c8508cb7f8",
            "default_route_table_id": "rtb-010636297d3553a31",
            "default_security_group_id": "sg-0a057a7aac2d17836",
            "dhcp_options_id": "dopt-0eaf4d61c961bc471",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0801d1eafdc5f14b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010636297d3553a31",
            "owner_id": "671590219173"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}